Map overlap fix

--- a/src/assets/styles/team.scss
+++ b/src/assets/styles/team.scss
@@ -463,8 +463,7 @@
   }
 
   .map-area {
-    margin-bottom: 50px;
-    margin-top: 175px;
+    margin: 175px 0  135px 0;
     transform: scale(1.3);
 
     .container {
